[package]
name = "fxc2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.52.0", features = ["Win32_Graphics_Direct3D_Fxc", "Win32", "Win32_Graphics", "Win32_Graphics_Direct3D", "Win32_Graphics_Hlsl"] }
